manifests/05-infisical-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical-lb
  namespace: infisical
spec:
  type: LoadBalancer
  selector:
    app: infisical
  ports:
    - port: 80
      targetPort: 8080
